# rustchain-bounties

./: README_BADGE_UPDATE.md  README_WITH_BADGES.md  STAR_FUNNEL_EXPLAINER.md  awesome-rustchain.md  requirements.txt  security-audit-zhaog100-2026-04-17.md  self-audit-anti-double-mining.md  self-audit-claims-eligibility.md  self-audit-governance.md  self-audit-rewards-rip200.md  self-audit-rustchain-health.md  self-audit-utxo-db.md  social-media-posts.md
bounty-hunter/: .env.example  README.md  __init__.py  evaluator.py  executor.py  main.py  requirements.txt  scanner.py  submitter.py  tracker.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
elyanlabs/: SEO_AUDIT.md
glassworm-protocol/: requirements.txt
marketing/: show-hn-draft.md
mcp-server/: README.md  package.json  tsconfig.json
powerpc-g4-challenge/: README.md
python-sdk/: README.md  pyproject.toml
python-sdk/src/rustchain/: __init__.py  client.py  exceptions.py
python-sdk/src/rustchain/cli/: __init__.py  main.py
python-sdk/tests/: test_sdk.py
rtc-reward-action/: .gitignore  Dockerfile  LICENSE  README.md  action.yml  reward.py
rustchain-bounty-agent/: .env.example  README.md  config.py  developer.py  evaluator.py  main.py  requirements.txt  scanner.py  submitter.py  test_agent.py  tracker.py
rustchain-miner/: Cargo.toml  LICENSE  README.md  build-all-targets.sh
rustchain-miner/.cargo/: config.toml
rustchain-miner/.github/workflows/: cross-compile.yml
rustchain-miner/contrib/: rustchain-miner.service
rustchain-miner/docs/: POWERPC.md
rustchain-miner/src/: attestation.rs  cli.rs  config.rs  main.rs  payload.rs
rustchain-miner/src/fingerprint/: anti_emulation.rs  cache_timing.rs  clock_drift.rs  instruction_jitter.rs  mod.rs  simd_identity.rs  thermal_drift.rs
rustchain-miner/src/hardware/: arch.rs  cpu.rs  mod.rs  system.rs
rustchain-miner/src/network/: endpoints.rs  mod.rs  tls.rs
rustchain-song/: lyrics.txt
rustchain-vscode-extension/: .gitignore  .vscodeignore  LICENSE  README.md  package.json  tsconfig.json
scripts/: verify_bounties.py
sea-shanties/: rustchain-lx277856602.md
security-audits/: audit-report-2867.md  utxo-audit-2819.md
telegram-bot/: .env.example  .gitignore  Dockerfile  README.md  (+2 more)
(+102 files in other folders)
