[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain"
version = "0.1.0"
description = "Python SDK for RustChain node interaction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "思捷娅科技 (SJYKJ)"}]
keywords = ["rustchain", "blockchain", "sdk", "rtc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["aiohttp>=3.9", "requests>=2.31"]

[project.optional-dependencies]
cli = []
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0"]

[project.scripts]
rustchain = "rustchain.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
