[package]
name = "rustchain-miner"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["RustChain Contributors"]
description = "Native Rust miner for RustChain — full RIP-PoA hardware fingerprinting"
license = "MIT"
repository = "https://github.com/Scottcjn/rustchain-bounties"
homepage = "https://github.com/Scottcjn/Rustchain"
documentation = "https://github.com/Scottcjn/rustchain-bounties/tree/main/rustchain-miner"
keywords = ["blockchain", "mining", "proof-of-antiquity", "rustchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"
exclude = ["target/", ".github/", "tests/"]

[[bin]]
name = "rustchain-miner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
mac_address = "1"
rand = "0.8"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
